# ettu-backend

./: .env.example  .gitignore  CHANGELOG.md  COMMON_CONFIG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  STATUS_BACKEND.md  TECH_STACK.md  codecov.yml  deny.toml  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
api/: hybrid-auth.md  projects.md  snippets.md
architecture/: audit-system.md  hybrid-system.md  moderation.md  permissions.md
database/: schema.sql  seed-data.sql
implementation/: deployment.md  rust-setup.md  security.md
migrations/: 0001_initial.sql  0002_initial_schema.sql
scripts/: setup.sh
src/: config.rs  database.rs  main.rs
src/handlers/: auth.rs  health.rs  metrics.rs  mod.rs  notes.rs  projects.rs  public.rs  snippets.rs  tasks.rs  users.rs
src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: common.rs  mod.rs  note.rs  project.rs  snippet.rs  task.rs  user.rs
src/services/: auth.rs  email.rs  mod.rs  project.rs  user.rs
src/utils/: error.rs  jwt.rs  mod.rs  password.rs  validation.rs
